packages/build/tests/error/fixtures/colors/plugin.js
import chalk from 'chalk'

export default {
  onPreBuild() {
    throw new Error(chalk.red('ColorTest'))
  },
}
